--- a/index.html
+++ b/index.html
@@ -319,6 +319,15 @@
       });
   });
 </script>
+	  
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-PJ0FK0VF4G"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-ABC123XYZ');
+</script>
 
   
 </body></html>
