--- a/index.html
+++ b/index.html
@@ -326,7 +326,8 @@
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-  gtag('config', 'G-ABC123XYZ');
+
+  gtag('config', 'G-PJ0FK0VF4G');
 </script>
 
   
