--- a/index.html
+++ b/index.html
@@ -321,14 +321,13 @@
 </script>
 	  
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-PJ0FK0VF4G"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-EN10D6YSHE"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-PJ0FK0VF4G');
+  gtag('config', 'G-EN10D6YSHE');
 </script>
-
   
 </body></html>
