--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <div class="u-layout-row">
                   <div class="u-container-style u-custom-color-1 u-layout-cell u-radius u-shape-round u-size-33 u-layout-cell-1" data-animation-name="flipIn" data-animation-duration="3000" data-animation-delay="0" data-animation-direction="X">
                     <div class="u-container-layout u-container-layout-1">
-                      <h2 class="u-align-center u-text u-text-default-lg u-text-default-xl u-text-1"> Consultaría Financiera y Contable </h2>
+                      <h2 class="u-align-center u-text u-text-default-lg u-text-default-xl u-text-1"> Consultor Financiera y Contable </h2>
                       <p class="u-text u-text-2"> Nuestra empresa nació para apoyar a personas naturales y jurídicas en la gestión contable, legal y tributaria, asegurando el cumplimiento normativo y promoviendo su crecimiento financiero.<br>
                         <br>&nbsp;Somos aliados estratégicos gracias a un equipo experto que combina conocimiento con tecnología avanzada para ofrecer soluciones perso​nalizadas, automatizadas y eficientes.<br> Con plataformas digitales, analítica financiera y sistemas inteligentes, ayudamos a optimizar recursos, prevenir sanciones y mantener obligaciones al día.<br>
                         <br>&nbsp;Nos guiamos por la transparencia, precisión e innovación tecnológica para transformar la gestión financiera y fomentar una cultura de cumplimiento en un entorno digital.
